# Ctrl-MORE

./: CMakeLists.txt  README.md  doxyfile
configs/: fbkCtrlzmpip.yaml  fdbkControllers.yaml  zmpip.yaml
examples/controllers/feedback/: FeedbackControllersManagerExample.cpp  FeedbackControllersManagerExample2.cpp
examples/controllers/feedback/individualControllers/: FeedbackControllerZmpIPExample.cpp
include/locomotion/: Locomotor.hpp  MyTemplateClass.hpp
include/locomotion/controllers/feedback/: FeedbackController.hpp  FeedbackControllerZmpIP.hpp  FeedbackControllersManager.hpp  PIDcontrol.hpp
include/locomotion/controllers/feedback/CoMPID/: CoMPIDcontroller.hpp
include/locomotion/controllers/feedback/ControlExample/: ControlExample.hpp
include/locomotion/states/: ControlState.hpp  RobotState.hpp
include/locomotion/utils/: utils.hpp
include/locomotion/utils/signalFilters/: SignalFilters.hpp
src/: Locomotor.cpp  MyTemplateClass.cpp  main.cpp
src/controllers/feedback/: FeedbackController.cpp  FeedbackControllerZmpIP.cpp  FeedbackControllersManager.cpp  PIDcontrol.cpp
src/controllers/feedback/CoMPID/: CoMPIDcontroller.cpp
src/controllers/feedback/ControlExample/: ControlExample.cpp
src/states/: ControlState.cpp  RobotState.cpp
src/utils/: SignalFilters.cpp  utils.cpp
templates/: FeedbackControllerTemplate.cpp  FeedbackControllerTemplate.hpp
